--- a/src/App.css
+++ b/src/App.css
@@ -151,3 +151,17 @@ height:150px;
 
 
 }
+
+.formAdd span * {
+  display: flex;
+  flex-direction: column;
+ align-items: space-between;
+ margin-left: 50px;
+ width: 90%;
+ padding: 5px;
+ flex-wrap: wrap;
+}
+.formAdd {
+  color: blue;
+  font-size: medium;
+}
